# mastr-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  README_de.md  actor_dropdowns.json  claude_desktop_config_example.json  consumption_dropdowns.json  gas_consumption_dropdowns.json  gas_production_dropdowns.json  mastr_mcp_server.py  pyproject.toml  server.json  unit_dropdowns.json
mastr_mcp/: __init__.py  client.py  config.py  filters.py  resources.py  serialization.py  server.py  tools_public.py  tools_soap.py
tests/: test_config.py  test_e2e_live.py  test_filters.py  test_serialization.py
